реализация эндпоинтов /users
